grammar.js
        document: ($) =>
            repeat(
                choice(
                    $.paragraph,
                    $.test_heading,
                    // TODO: add more
                    newline,
                ),
            ),
        word: (_) => word,
        paragraph: ($) =>
            prec.right(
                1,
                seq(
                    $._non_ws,
                    choice(
                        prec(-1, alias($.soft_break, "_paragraph_break")),
                        alias($._eof, "_paragraph_break"),
                    ),
                ),
            ),
        attached_modifier_extension: ($) =>
            seq(
                "(",
                optional(whitespace),
                $.attr_pair,
                repeat(
                    seq(
                        optional(whitespace),
                        "|",
                        optional(whitespace),
                        $.attr_pair,
                    ),
                ),
                optional(whitespace),
                ")",
            ),
        attr_pair: ($) =>
            seq(
                field("key", $.word),
                optional(whitespace),
                ":",
                optional(whitespace),
                field("val", $.word),
            ),
        _non_ws: ($) =>
            choice(
                seq($.word, optional(alias($._open_conflict, $.punc))),
                $.punc,
                $.escape_sequence,
                // TODO: wrap this seq(...) as _link_mod_wrap and make it conflict with punc or _non_ws
                seq(
                    optional(seq($.word, $.link_modifier)),
                    choice(
                        ...ATTACHED_MODIFIERS.map((t) => $[t]),
                        ...ATTACHED_MODIFIERS.map((t) => $["free_" + t]),
                        ...VERBATIM_ATTACHED_MODIFIERS.map((t) => $[t]),
                        ...VERBATIM_ATTACHED_MODIFIERS.map(
                            (t) => $["free_" + t],
                        ),
                    ),
                    optional(seq($.link_modifier, $._lookahead_word)),
                ),
                $.anchor,
                $.link,
                prec.left(seq($._non_ws, $._non_ws)),
                prec.left(seq($._non_ws, $.ws, $._non_ws)),
                prec.left(seq($._non_ws, $.soft_break, $._non_ws)),
            ),
    },
});

/**
 * @param {string} type
 * @param {string} mod
 */
function gen_attached_modifier(type, mod) {
    const other_attached_modfiers = ATTACHED_MODIFIERS.filter((t) => t != type);
    let rules = gen_free_attached_modifier(type);
    // NOTE: give precedence level on *_open to give higher prefer
    // level to stack with *_open even attached modifier is not completed yet
    rules[type + "_open"] = (_) =>
        prec.dynamic(PREC.standard_attached_modifier, mod);
    rules["_" + type + "_non_ws"] = ($) =>
        choice(
            seq($.word, optional(alias($._open_conflict, $.punc))),
            $.punc,
            $.escape_sequence,
            seq(
                optional(seq($.word, $.link_modifier)),
                choice(
                    ...other_attached_modfiers.map((t) => $[t]),
                    ...other_attached_modfiers.map((t) => $["free_" + t]),
                    ...VERBATIM_ATTACHED_MODIFIERS.map((t) => $[t]),
                    ...VERBATIM_ATTACHED_MODIFIERS.map((t) => $["free_" + t]),
                ),
                // NOTE: use zero-length token here to ensure lookahead is word without actually consuming it
                optional(seq($.link_modifier, $._lookahead_word)),
            ),
            prec.left(
                seq($["_" + type + "_non_ws"], $["_" + type + "_non_ws"]),
            ),
            prec.left(
                seq($["_" + type + "_non_ws"], $.ws, $["_" + type + "_non_ws"]),
            ),
            prec.left(
                seq(
                    $["_" + type + "_non_ws"],
                    $.soft_break,
                    $["_" + type + "_non_ws"],
                ),
            ),
        );
    rules[type] = ($) =>
        seq(
            d_alias($[type + "_open"], "_open"),
            $["_" + type + "_non_ws"],
            d_alias($[type + "_close"], "_close"),
            optional(field("extension", $.attached_modifier_extension)),
        );
    return rules;
}

/**
 * @param {string} type
 */
function gen_free_attached_modifier(type) {
    const other_attached_modfiers = ATTACHED_MODIFIERS.filter((t) => t != type);
    /**
     * @type {RuleBuilders<string, string>}
     */
    let rules = {};
    rules["free_" + type + "_open"] = ($) =>
        prec.dynamic(
            PREC.free_form_standard_attached_modifier,
            seq(alias($[type + "_open"], "open"), $._free_open),
        );
    rules["_free_" + type + "_inline"] = ($) =>
        prec.right(
            repeat1(
                choice(
                    seq($.word, optional(alias($._open_conflict, $.punc))),
                    $.ws,
                    $.punc,
                    ...other_attached_modfiers.map((t) => $[t]),
                    ...other_attached_modfiers.map((t) => $["free_" + t]),
                    ...VERBATIM_ATTACHED_MODIFIERS.map((t) => $[t]),
                    ...VERBATIM_ATTACHED_MODIFIERS.map((t) => $["free_" + t]),
                ),
            ),
        );
    rules["free_" + type] = ($) =>
        seq(
            d_alias($["free_" + type + "_open"], "_open"),
            choice(
                $.soft_break,
                seq(
                    optional($.soft_break),
                    $["_free_" + type + "_inline"],
                    repeat(seq($.soft_break, $["_free_" + type + "_inline"])),
                    optional($.soft_break),
                ),
            ),
            d_alias($["free_" + type + "_close"], "_close"),
            optional($.attached_modifier_extension),
        );
    return rules;
}

/**
 * @param {string} type
 * @param {string} mod
 */
function gen_verbatim_attached_modifier(type, mod) {
    let rules = gen_free_verbatim_attached_modifier(type);
    // NOTE: give precedence level on verbatim_open to give higher prefer
    // level to stack with verbatim_open even verbatim is not completed yet
    rules[type + "_open"] = (_) =>
        prec.dynamic(PREC.verbatim_attached_modifier, mod);
    const _non_ws = "_" + type + "_non_ws";
    rules[type] = ($) =>
        seq(
            d_alias($[type + "_open"], "_open"),
            $[_non_ws],
            d_alias($[type + "_close"], "_close"),
            optional($.attached_modifier_extension),
        );
    rules[_non_ws] = ($) =>
        prec.right(
            choice(
                seq($.word, optional(alias($._open_conflict, $.punc))),
                $.punc,
                $.escape_sequence,
                alias("[", $.punc),
                alias("{", $.punc),
                prec.left(seq($[_non_ws], $[_non_ws])),
                prec.left(seq($[_non_ws], $.ws, $[_non_ws])),
                prec.left(seq($[_non_ws], $.soft_break, $[_non_ws])),
            ),
        );
    return rules;
}

/**
 * @param {string} type
 */
function gen_free_verbatim_attached_modifier(type) {
    /**
     * @type {RuleBuilders<string, string>}
     */
    let rules = {};
    rules["free_" + type + "_open"] = ($) =>
        prec.dynamic(
            PREC.free_form_verbatim_attached_modifier,
            seq(alias($[type + "_open"], "open"), $._free_open),
        );
    rules["_free_" + type + "_inline"] = ($) =>
        prec.right(
            repeat1(
                choice(
                    seq($.word, optional(alias($._open_conflict, $.punc))),
                    $.ws,
                    $.punc,
                ),
            ),
        );
    rules["free_" + type] = ($) =>
        seq(
            d_alias($["free_" + type + "_open"], "_open"),
            choice(
                $.soft_break,
                seq(
                    optional($.soft_break),
                    $["_free_" + type + "_inline"],
                    repeat(seq($.soft_break, $["_free_" + type + "_inline"])),
                    optional($.soft_break),
                ),
            ),
            d_alias($["free_" + type + "_close"], "_close"),
            optional($.attached_modifier_extension),
        );
    return rules;
}
